--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>BIT MTY</title>
 
-  <!-- Bootstrap core CSS -->
+
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Source+Code+Pro" rel="stylesheet">
 
 
@@ -15,15 +15,9 @@
     crossorigin="anonymous">
 
 
-  <!-- Custom fonts for this template -->
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
-
-
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
-    rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
-    rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
 
@@ -39,7 +33,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">BIT MTY</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">BIT<br>MTY</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,23 +59,22 @@
 
   <header class="masthead text-center text-black d-flex">
 
-    <div id="carouselExampleIndicators" class="container carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="container carousel-inner  ">
-        <div class="carousel-item  active">
+    <div class="container carousel slide" data-ride="carousel">
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
           <h1 class="text-uppercase">
-            <strong>BIT<br>MTY</strong>
+            <strong>bit<br>mty</strong>
           </h1>
           <hr>
-          <p class="text-black">Te ayudamos a aterrizar tus ideas, asesorandote en como planificar, distribuir y corrdinar
-            equipos de desarrollo.</p>
+          <div class="col-md-6 offset-md-3">
+            <p class="text-black">Te ayudamos a conceptualizar tus proyectos digitales, seguimos una metodología propia, para diseñar una solucion que cumpla con las expectativas de tus usuarios.</p>
+            <button type="button" class="btn btn-outline-secondary">Iniciar</button>
+          </div>
+
         </div>
-        
-        
+
+
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -98,7 +91,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h4 class="section-heading">Mira en que te podemos ayudarS</h4>
+          <h4 class="section-heading"> Mira en que te podemos ayudar</h4>
           <hr class="my-4">
         </div>
       </div>
@@ -108,52 +101,58 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x fa-brain text-primary mb-3 sr-icons"></i>
-            <h6>Conceptualización de Ideas IT</h6>
-            <p class="text-muted mb-0">Te ayudamos a comunicar y expresar tu idea con especificaciones técnicas.</p>
+            <h6>MAKETANDO</h6>
+            <p class="text-muted mb-0">Conceptualiza un producto digital, siguiendo una innovadora metodología creada a partir
+              de las necesidades del usuario.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x fa-pen-nib text-primary mb-3 sr-icons"></i>
-            <h6>Imagene identidad grafica</h6>
-            <p class="text-muted mb-0">Solucionamos en gran parte las necesidades graficas visuales y multimedia que requieras
-              para impulsar tu idea.</p>
+            <h6>UI & UX Design</h6>
+            <p class="text-muted mb-0">Creamos a tu lado la experiencia de tu producto, centrandonos en las necesidades de
+              tus usuarios.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-chart-line text-primary mb-3 sr-icons"></i>
-            <h6>Escalabilidad de concepto</h6>
-            <p class="text-muted mb-0">Supera las expectativas de tus ideas, crece al ritmo de ella y conviertela en lo mejor
-              que pueda ser con la correcta orientación.</p>
+            <i class="fa fa-4x fa-globe text-primary mb-3 sr-icons"></i>
+            <h6>No dejes de crecer</h6>
+            <p class="text-muted mb-0">Te ayudamos a emplear las nuevas tecnologías y servicios, que cumplan a tus expectativas.</p>
           </div>
+
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x fa-cubes text-primary mb-3 sr-icons"></i>
-            <h6>Consultoría sobre producción 3D y motion graphics
-              </h3>
-              <p class="text-muted mb-0">Organiza, crea y genera guiones para tus producciones, control de grabaciones y
-                las tareas envueltas en la producción de contenido digital</p>
+            <h6>Producción Digital</h6>
+            <p class="text-muted mb-0 centered">Organiza y genera carpetas de producción, que optimizen los procesos de producción,
+              con herramientas digitales. </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="p-0" id="portfolio">
+  <section id="portfolio">
+
     <div class="container-fluid p-0">
+      <div class="col-lg-12 text-center">
+        <h4 class="section-heading">Portafolio</h4>
+        <hr class="my-4">
+      </div>
       <div class="row no-gutters popup-gallery">
+
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-black">
-                  Category
+                  Mobile
                 </div>
                 <div class="project-name">
-                  Project Name
+                  ART3D
                 </div>
               </div>
             </div>
@@ -165,10 +164,10 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-black">
-                  Category
+                  Web Design
                 </div>
                 <div class="project-name">
-                  Project Name
+                  PLANNED
                 </div>
               </div>
             </div>
@@ -180,61 +179,19 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-black">
-                  Category
+                  Mobile
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Educoins
                 </div>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-black">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-black">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-black">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
+
+
       </div>
+    </div>
     </div>
   </section>
   <section id="contact">
@@ -243,19 +200,32 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Entra en contacto con nosotros</h2>
           <hr class="my-4">
-          <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and
-            we will get back to you as soon as possible!</p>
+          <p class="mb-5">¿Estás pensando en hacer un producto digital y no sabes por donde comenzar?<br>Nosotros podemos ayudarte, platicanos que traes en mente y nosotros te decimos que necesitas para comenzar a desarrollarlo.</p>
         </div>
       </div>
       <div class="row">
-
-        <div class="col-lg-4 mr-auto text-center">
+        <div class="col-md-6 offset-md-3">
+          <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Hablanos de tu idea</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="col-md-6 offset-md-8">
+              <button type="button" class="btn btn-outline-secondary">Enviar</button>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-6 mr-auto text-center">
           <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
           <p>
             <a href="mailto:your-email@your-domain.com">bitmty@gmail.com</a>
           </p>
         </div>
-        <div class="col-lg-4 ml-auto text-center">
+        <div class="col-md-6   ml-auto text-center">
           <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
           <p>MX +52 1 55-8209-5760</p>
         </div>
