--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>BIT MTY</title>
 
-
+  <link rel="stylesheet" href="css/flaticon.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Source+Code+Pro" rel="stylesheet">
 
 
@@ -68,8 +68,9 @@
           </h1>
           <hr>
           <div class="col-md-6 offset-md-3">
-            <p class="text-black">Te ayudamos a conceptualizar tus proyectos digitales, seguimos una metodología propia, para diseñar una solucion que cumpla con las expectativas de tus usuarios.</p>
-            <button type="button" class="btn btn-outline-secondary">Iniciar</button>
+            <p class="text-black">Te ayudamos a conceptualizar tus proyectos digitales, seguimos una metodología propia,
+              para diseñar una solucion que cumpla con las expectativas de tus usuarios.</p>
+            <a href="#contact" class=" js-scroll-trigger"> <button type="button" class="btn btn-outline-secondary">Iniciar</button></a>
           </div>
 
         </div>
@@ -100,7 +101,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-brain text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x flaticon-019-info text-primary mb-3 sr-icons"></i>
             <h6>MAKETANDO</h6>
             <p class="text-muted mb-0">Conceptualiza un producto digital, siguiendo una innovadora metodología creada a partir
               de las necesidades del usuario.</p>
@@ -108,7 +109,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-pen-nib text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x flaticon-014-write text-primary mb-3 sr-icons"></i>
             <h6>UI & UX Design</h6>
             <p class="text-muted mb-0">Creamos a tu lado la experiencia de tu producto, centrandonos en las necesidades de
               tus usuarios.</p>
@@ -116,7 +117,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-globe text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x flaticon-006-www text-primary mb-3 sr-icons"></i>
             <h6>No dejes de crecer</h6>
             <p class="text-muted mb-0">Te ayudamos a emplear las nuevas tecnologías y servicios, que cumplan a tus expectativas.</p>
           </div>
@@ -124,7 +125,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-cubes text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x flaticon-028-notice text-primary mb-3 sr-icons"></i>
             <h6>Producción Digital</h6>
             <p class="text-muted mb-0 centered">Organiza y genera carpetas de producción, que optimizen los procesos de producción,
               con herramientas digitales. </p>
@@ -149,7 +150,8 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-black">
-                  Mobile
+                  <i class="fa fa-4x flaticon-027-mobile-phone text-primary mb-3 sr-icons"></i>
+                  <br>Mobile
                 </div>
                 <div class="project-name">
                   ART3D
@@ -164,7 +166,8 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-black">
-                  Web Design
+                  <i class=" fa fa-4x flaticon-011-web text-primary mb-3 sr-icons"></i>
+                  <br>Web Design
                 </div>
                 <div class="project-name">
                   PLANNED
@@ -179,7 +182,8 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-black">
-                  Mobile
+                  <i class="fa fa-4x flaticon-027-mobile-phone text-primary mb-3 sr-icons"></i>
+                  <br>Mobile
                 </div>
                 <div class="project-name">
                   Educoins
@@ -200,7 +204,8 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Entra en contacto con nosotros</h2>
           <hr class="my-4">
-          <p class="mb-5">¿Estás pensando en hacer un producto digital y no sabes por donde comenzar?<br>Nosotros podemos ayudarte, platicanos que traes en mente y nosotros te decimos que necesitas para comenzar a desarrollarlo.</p>
+          <p class="mb-5">¿Estás pensando en hacer un producto digital y no sabes por donde comenzar?<br>Nosotros podemos
+            ayudarte, platicanos que traes en mente y nosotros te decimos que necesitas para comenzar a desarrollarlo.</p>
         </div>
       </div>
       <div class="row">
@@ -219,19 +224,12 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 mr-auto text-center">
-          <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
-          <p>
-            <a href="mailto:your-email@your-domain.com">bitmty@gmail.com</a>
-          </p>
-        </div>
-        <div class="col-md-6   ml-auto text-center">
-          <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-          <p>MX +52 1 55-8209-5760</p>
-        </div>
+
       </div>
     </div>
   </section>
+
+ 
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -244,11 +242,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.carousel').carousel()
-    });
-  </script>
+
 </body>
 
 </html>
