--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="row no-gutters popup-gallery">
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+          <a class="portfolio-box" href="https://thce911.github.io/art3d" target="_blank" > 
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
